--- a/Views/SaleDetails/Create.cshtml
+++ b/Views/SaleDetails/Create.cshtml
@@ -13,6 +13,10 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="SaleMasterId" class="control-label"></label>
+                <select asp-for="SaleMasterId" class ="form-control" asp-items="ViewBag.SaleMasterId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="ItemNo" class="control-label"></label>
                 <input asp-for="ItemNo" class="form-control" />
                 <span asp-validation-for="ItemNo" class="text-danger"></span>
