--- a/Views/SaleMasters/Index.cshtml
+++ b/Views/SaleMasters/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New</a> |   <a asp-action="CreateSale">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -46,8 +46,8 @@
                 <a asp-action="Edit" asp-route-id="@item.SaleMasterId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SaleMasterId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.SaleMasterId">Delete</a> | 
-                <a asp-controller="SaleDetails" asp-action="Create" asp-route-id="@item.SaleMasterId">Add Details</a> |
-                <a asp-controller="SaleDetails" asp-action="">Details</a> 
+                @*<a asp-controller="SaleDetails" asp-action="Create" asp-route-id="@item.SaleMasterId">Add Details</a> |
+                <a asp-controller="SaleDetails" asp-action="" asp-route-id="@item.SaleMasterId">Details</a> *@
             </td>
         </tr>
 }
