--- a/Views/SaleDetails/Edit.cshtml
+++ b/Views/SaleDetails/Edit.cshtml
@@ -13,11 +13,10 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SaleDetailId" />
-            <div class="form-group">
-                <label asp-for="SaleMasterId" class="control-label"></label>
-                <select asp-for="SaleMasterId" class="form-control" asp-items="ViewBag.SaleMasterId"></select>
-                <span asp-validation-for="SaleMasterId" class="text-danger"></span>
-            </div>
+                <input type="hidden" asp-for="SaleMasterId" value="@ViewBag.SMID" />
+                @*<select asp-for="SaleMasterId" class="form-control" asp-items="ViewBag.SaleMasterId"></select>
+                <span asp-validation-for="SaleMasterId" class="text-danger"></span>*@
+           
             <div class="form-group">
                 <label asp-for="ItemNo" class="control-label"></label>
                 <input asp-for="ItemNo" class="form-control" />
@@ -51,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-controller="SaleMasters" asp-route-id="@ViewBag.SMID">Cancel</a>
 </div>
 
 @section Scripts {
