--- a/Views/SaleMasters/Create.cshtml
+++ b/Views/SaleMasters/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input asp-for="Date" class="form-control" asp-format="{0:dd/MM/yyyy HH:mm}" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
