--- a/Views/SaleMasters/Details.cshtml
+++ b/Views/SaleMasters/Details.cshtml
@@ -4,47 +4,33 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
-<div>
-    <h4>SaleMaster</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tax)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tax)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.SaleMasterId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-<div>
-    
-@section Scripts {
-    @{await Html.RenderPartialAsync("PTest");}
-
-    @{await Html.RenderPartialAsync("../SaleDetails/test", @Model.SaleDetails);}
-}
-</div>
+<div class="container mt-5">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-8">
+            <div class="p-3 bg-white rounded">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="text-uppercase">Invoice </h1>
+                        <div class="billed"><span class="font-weight-bold text-uppercase">Customer:</span><span class="ml-1">  @Html.DisplayFor(model => model.Customer)</span></div>
+                        <div class="billed"><span class="font-weight-bold text-uppercase">Date:</span><span class="ml-1">@Html.DisplayFor(model => model.Date)</span></div>
+                        <div class="billed"><span class="font-weight-bold text-uppercase">Bill No:</span><span class="ml-1">#@Html.DisplayFor(model => model.SaleMasterId)</span></div>
+                        <div class="billed"><span class="font-weight-bold text-uppercase"><a asp-action="Edit" asp-route-id="@Model.SaleMasterId">Edit</a></span>
+                            <span class="font-weight-bold text-uppercase"><a asp-controller="SaleDetails" asp-action="Create" asp-route-id="@Model.SaleMasterId">Add Item</a></span>
+                            </div>
+                    </div>
+                </div>
+                <div class="row">
+                    @{
+                        Html.RenderPartial("../SaleDetails/test", @Model.SaleDetails);
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="container mt-5">
+         <div class="d-flex justify-content-center row">
+        <a asp-action="Index">Back to List</a>
+        </div>
+    </div>
