--- a/Views/SaleMasters/Index.cshtml
+++ b/Views/SaleMasters/Index.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-action="Create">Create New</a> |   <a asp-action="CreateSale">Create New</a>
+      <a asp-action="CreateSale">Create Sale</a>
 </p>
 <table class="table">
     <thead>
@@ -18,9 +16,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Tax)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.Total)
             </th>
@@ -36,16 +32,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tax)
-            </td>
+          
             <td>
                 @Html.DisplayFor(modelItem => item.Total)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SaleMasterId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SaleMasterId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SaleMasterId">Delete</a> | 
+                <a asp-action="Delete" asp-route-id="@item.SaleMasterId">Delete</a>  
                 @*<a asp-controller="SaleDetails" asp-action="Create" asp-route-id="@item.SaleMasterId">Add Details</a> |
                 <a asp-controller="SaleDetails" asp-action="" asp-route-id="@item.SaleMasterId">Details</a> *@
             </td>
