--- a/Views/SaleMasters/Index.cshtml
+++ b/Views/SaleMasters/Index.cshtml
@@ -10,7 +10,7 @@
             <table>
                 <tr>
                     <td>
-                        <input id="CurrentDate" name="CurrentDate" asp-format="{0:dd/MM/yyyy}" value="@ViewData["CurrentDate"]" style="width:200px;" class="form-control" />
+                        <input id="CurrentDate" name="CurrentDate" asp-format="{0:yyyyMMdd}" value="@ViewData["CurrentDate"]" style="width:200px;" class="form-control" />
                     </td>
                     <td>
                         <input type="submit" value="Filter" class="btn btn-primary" />
