--- a/Views/SaleMasters/Index.cshtml
+++ b/Views/SaleMasters/Index.cshtml
@@ -97,7 +97,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.SaleMasterId">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.SaleMasterId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.SaleMasterId">Delete</a>
+                    <a asp-action="Delete" class="link-danger"  asp-route-id="@item.SaleMasterId">Delete</a>
                     @*<a asp-controller="SaleDetails" asp-action="Create" asp-route-id="@item.SaleMasterId">Add Details</a> |
                         <a asp-controller="SaleDetails" asp-action="" asp-route-id="@item.SaleMasterId">Details</a> *@
                 </td>
