--- a/Views/SaleMasters/Edit.cshtml
+++ b/Views/SaleMasters/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Edit</h1>
 
-<h4>SaleMaster</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,15 +33,12 @@
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />    <a asp-action="Index">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
