--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,27 @@
 
 <div class="text-center">
     <h1 class="display-4">Sale Management</h1>
-    <p>It's build on .Net Core MVC using Entity Framework and deployed on Azure App Services</p>
+    <p>It's a solution for managing sales for customers and managing purchased items having a report which could be filter by date.</p>
+    <p>
+        
+        <ul  class="list-group">
+             <li  class="list-group-item"><b>Technologies Used:</b></li>
+            <li  class="list-group-item">MVC .Net Core 6</li>
+            <li  class="list-group-item">Entitiy Framework 6</li>
+            <li  class="list-group-item">SQL Server 2018</li>
+            <li  class="list-group-item">Bootstrap</li>
+            <li  class="list-group-item">Azure App Service</li>
+            <li  class="list-group-item">Azure Storage</li>
+        </ul>
+        <br />
+
+    </p>
+    <p>
+        <b>Github Link</b> <br />
+        <a target="_blank" href='https://github.com/gecezeeshan/SalesManagement.git' >https://github.com/gecezeeshan/SalesManagement.git</a>
+
+    </p>
+
 
     <p><b>Developed By:</b> Zeeshan</p>
 </div>
